[package]
name = "garasu"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Garasu (硝子) — GPU rendering engine: wgpu pipeline, text rendering, shader system, and winit integration"
homepage = "https://github.com/pleme-io/garasu"
repository = "https://github.com/pleme-io/garasu"
documentation = "https://docs.rs/garasu"
readme = "README.md"
license = "MIT"
categories = ["rendering", "graphics"]
keywords = ["wgpu", "gpu", "rendering", "winit", "glyphon"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
wgpu = "25"
winit = "0.30"
glyphon = "0.9"
pollster = "0.4"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
raw-window-handle = "0.6"
# blake3 — content-addressable hash of pixel buffers for
# headless golden tests. Pure-Rust default, no system deps.
blake3 = "1"
# Persistent fontdb cache (font_cache.rs) — skip 150-250 ms
# of system-font scanning on every cold start.
fontdb = "0.16"
bincode = "1.3"
dirs = "6"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"

[features]
default = []
# Opt-in: runs `headless`-module tests that actually drive wgpu.
# CI runners without a real GPU adapter should leave this off; the
# pure-data tests for the magenta heuristic still run.
gpu_tests = []
